[gd_scene load_steps=21 format=2]

[ext_resource path="res://work_remainder.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://time_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://work_goal.gd" type="Script" id=5]
[ext_resource path="res://now.gd" type="Script" id=6]
[ext_resource path="res://expected_finish.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/small_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://progress.gd" type="Script" id=9]
[ext_resource path="res://work_timer.gd" type="Script" id=10]
[ext_resource path="res://assets/theme/small_theme.tres" type="Theme" id=11]
[ext_resource path="res://input_field/time_line_edit.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
PopupMenu/fonts/font = ExtResource( 8 )
TooltipLabel/fonts/font = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.54902, 0.223529, 0.223529, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.545098, 0.0666667, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.380392, 0.486275, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="tasks" type="PanelContainer" parent="HBoxContainer"]
margin_right = 86.0
margin_bottom = 600.0
theme = ExtResource( 11 )

[node name="task_list" type="VBoxContainer" parent="HBoxContainer/tasks"]
margin_left = 7.0
margin_top = 7.0
margin_right = 79.0
margin_bottom = 593.0

[node name="task" type="PanelContainer" parent="HBoxContainer/tasks/task_list"]
margin_right = 72.0
margin_bottom = 74.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/tasks/task_list/task"]
margin_left = 7.0
margin_top = 7.0
margin_right = 65.0
margin_bottom = 67.0

[node name="name" type="Label" parent="HBoxContainer/tasks/task_list/task/VBoxContainer"]
margin_right = 58.0
margin_bottom = 23.0
text = "work"

[node name="time_input" type="LineEdit" parent="HBoxContainer/tasks/task_list/task/VBoxContainer"]
margin_top = 27.0
margin_right = 58.0
margin_bottom = 60.0
expand_to_text_length = true
script = ExtResource( 13 )

[node name="Control" type="Control" parent="HBoxContainer"]
visible = false
margin_right = 32.0
margin_bottom = 600.0
rect_min_size = Vector2( 32, 32 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 90.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="timers" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 934.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="work_timer" parent="HBoxContainer/VBoxContainer/timers" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 467.0
margin_bottom = 159.0
script = ExtResource( 10 )
title = "Work"
description = "this is the time you've spent focusing"

[node name="play_timer" parent="HBoxContainer/VBoxContainer/timers" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_left = 467.0
margin_right = 934.0
margin_bottom = 159.0
script = ExtResource( 10 )
color = Color( 0.764706, 0.764706, 0.764706, 1 )
title = "Play"
description = "this is the time you've spent NOT focusing"

[node name="remainder" parent="HBoxContainer/VBoxContainer/timers" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 159.0
margin_right = 467.0
margin_bottom = 317.0
script = ExtResource( 1 )
color = Color( 0.780392, 1, 0, 1 )
title = "Remainder"
description = "focus time remaining"
goal_path = NodePath("../work_goal")
timer_path = NodePath("../work_timer")

[node name="work_goal" parent="HBoxContainer/VBoxContainer/timers" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_left = 467.0
margin_top = 159.0
margin_right = 934.0
margin_bottom = 317.0
script = ExtResource( 5 )
color = Color( 0, 1, 0.929412, 1 )
title = "Goal"
description = "goal focus time, set it with HH:MM:SS"

[node name="expected_finish" parent="HBoxContainer/VBoxContainer/timers" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 317.0
margin_right = 467.0
margin_bottom = 475.0
script = ExtResource( 7 )
color = Color( 1, 0.498039, 0.498039, 1 )
title = "Finish"
description = "expected finish time"
remainder_path = NodePath("../remainder")
timer_path = NodePath("../work_timer")
goal_path = NodePath("../work_goal")
now_path = NodePath("../now")

[node name="now" parent="HBoxContainer/VBoxContainer/timers" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_left = 467.0
margin_top = 317.0
margin_right = 934.0
margin_bottom = 475.0
script = ExtResource( 6 )
color = Color( 0.764706, 0.764706, 0.764706, 1 )
title = "Now"
description = "current time"

[node name="buttons" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 479.0
margin_right = 934.0
margin_bottom = 573.0

[node name="play" type="Button" parent="HBoxContainer/VBoxContainer/buttons"]
unique_name_in_owner = true
margin_right = 180.0
margin_bottom = 94.0
size_flags_horizontal = 3
text = "work"

[node name="stop" type="Button" parent="HBoxContainer/VBoxContainer/buttons"]
unique_name_in_owner = true
margin_left = 184.0
margin_right = 364.0
margin_bottom = 94.0
size_flags_horizontal = 3
toggle_mode = true
text = "stop"

[node name="freeze" type="Button" parent="HBoxContainer/VBoxContainer/buttons"]
unique_name_in_owner = true
margin_left = 368.0
margin_right = 566.0
margin_bottom = 94.0
size_flags_horizontal = 3
toggle_mode = true
text = "freeze"

[node name="clear" type="Button" parent="HBoxContainer/VBoxContainer/buttons"]
unique_name_in_owner = true
margin_left = 570.0
margin_right = 750.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "clear"

[node name="log_day" type="Button" parent="HBoxContainer/VBoxContainer/buttons"]
unique_name_in_owner = true
margin_left = 754.0
margin_right = 934.0
margin_bottom = 94.0
size_flags_horizontal = 3
text = "log"

[node name="progress" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
margin_top = 577.0
margin_right = 934.0
margin_bottom = 600.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
script = ExtResource( 9 )
goal_path = NodePath("../timers/work_goal")
timer_path = NodePath("../timers/work_timer")

[node name="Control2" type="Control" parent="HBoxContainer"]
visible = false
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 32, 32 )
